休憩終了時間の設定を追加

--- a/src/popup.html
+++ b/src/popup.html
@@ -105,7 +105,6 @@
       </div>
 
       <div class="setting-item" id="notification-1-setting">
-        <label for="warning-time-1">1回目の通知タイミング:</label>
         <select id="warning-time-1">
           <option value="60">1時間前</option>
           <option value="30">30分前</option>
@@ -123,7 +122,6 @@
       </div>
 
       <div class="setting-item" id="notification-2-setting">
-        <label for="warning-time-2">2回目の通知タイミング:</label>
         <select id="warning-time-2">
           <option value="5">5分前</option>
           <option value="3">3分前</option>
@@ -146,6 +144,36 @@
         </select>
       </div>
     </div>
+
+    <div class="setting-interval">
+      <label>
+        <input type="checkbox" id="enable-break-notifications" />
+        休憩終了通知を有効にする
+      </label>
+    </div>
+
+    <div class="setting-item" id="break-duration-setting">
+      <label for="break-duration">想定休憩時間:</label>
+      <select id="break-duration">
+        <option value="10">10分</option>
+        <option value="15">15分</option>
+        <option value="30">30分</option>
+        <option value="45">45分</option>
+        <option value="60" selected>60分</option>
+        <option value="90">90分</option>
+      </select>
+    </div>
+
+    <div class="setting-item" id="break-notification-setting">
+      <label for="break-warning-time">休憩終了の通知タイミング:</label>
+      <select id="break-warning-time">
+        <option value="10">10分前</option>
+        <option value="5" selected>5分前</option>
+        <option value="3">3分前</option>
+        <option value="1">1分前</option>
+      </select>
+    </div>
+
     <div class="info">
       <h3>📋 使い方</h3>
       <p>
