休憩終了通知をブラッシュアップ

--- a/src/popup.html
+++ b/src/popup.html
@@ -115,9 +115,25 @@
         </select>
       </div>
 
-      <div class="setting-item" id="custom-warning-1-setting" style="display: none;">
+      <div
+        class="setting-item"
+        id="custom-warning-1-setting"
+        style="display: none"
+      >
         <label for="custom-warning-1">カスタム時間（分）:</label>
-        <input type="number" id="custom-warning-1" min="1" max="480" placeholder="例: 25" style="width: 100%; padding: 5px; border: 1px solid #ddd; border-radius: 3px;" />
+        <input
+          type="number"
+          id="custom-warning-1"
+          min="1"
+          max="480"
+          placeholder="例: 25"
+          style="
+            width: 100%;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+          "
+        />
       </div>
 
       <div class="setting-interval">
@@ -136,9 +152,25 @@
         </select>
       </div>
 
-      <div class="setting-item" id="custom-warning-2-setting" style="display: none;">
+      <div
+        class="setting-item"
+        id="custom-warning-2-setting"
+        style="display: none"
+      >
         <label for="custom-warning-2">カスタム時間（分）:</label>
-        <input type="number" id="custom-warning-2" min="1" max="480" placeholder="例: 2" style="width: 100%; padding: 5px; border: 1px solid #ddd; border-radius: 3px;" />
+        <input
+          type="number"
+          id="custom-warning-2"
+          min="1"
+          max="480"
+          placeholder="例: 2"
+          style="
+            width: 100%;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+          "
+        />
       </div>
 
       <div class="setting-interval">
@@ -157,12 +189,27 @@
         </select>
       </div>
 
-      <div class="setting-item" id="custom-overtime-setting" style="display: none;">
+      <div
+        class="setting-item"
+        id="custom-overtime-setting"
+        style="display: none"
+      >
         <label for="custom-overtime">カスタム間隔（分）:</label>
-        <input type="number" id="custom-overtime" min="1" max="480" placeholder="例: 45" style="width: 100%; padding: 5px; border: 1px solid #ddd; border-radius: 3px;" />
+        <input
+          type="number"
+          id="custom-overtime"
+          min="1"
+          max="480"
+          placeholder="例: 45"
+          style="
+            width: 100%;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+          "
+        />
       </div>
     </div>
-
 
     <div class="info">
       <h3>📋 使い方</h3>
@@ -170,7 +217,9 @@
         1. freee勤怠管理ページを開く<br />
         2. 「修正」ボタンをクリック<br />
         3. 自動で8時間完了予定時刻を計算<br />
-        4. 設定した時間に通知が表示されます
+        4. 設定した時間に通知が表示されます<br />
+        5.
+        通知時間の設定を変更した場合は、「修正ボタン」をクリックして登録し直してください。
       </p>
     </div>
 
