休憩時間を通知しないオプションを追加

--- a/src/popup.html
+++ b/src/popup.html
@@ -219,7 +219,7 @@
         3. 自動で8時間完了予定時刻を計算<br />
         4. 設定した時間に通知が表示されます<br />
         5.
-        通知時間の設定を変更した場合は、「修正ボタン」をクリックして登録し直してください。
+        ⚠️通知時間の設定を変更した場合は、「修正ボタン」をクリックして登録し直してください。
       </p>
     </div>
 
