--- a/src/popup.html
+++ b/src/popup.html
@@ -97,6 +97,26 @@
     </div>
 
     <div class="settings">
+      <div class="setting-item">
+        <label for="work-hours" style="font-weight: bold"
+          >予定勤務時間（時間）</label
+        >
+        <input
+          type="number"
+          id="work-hours"
+          value="8"
+          min="1"
+          max="24"
+          step="0.5"
+          style="
+            width: 100%;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+          "
+        />
+      </div>
+
       <div class="setting-interval">
         <label>
           <input type="checkbox" id="enable-notification-1" checked />
@@ -216,7 +236,7 @@
       <p>
         1. freee勤怠管理ページを開く<br />
         2. 「修正」ボタンをクリック<br />
-        3. 自動で8時間完了予定時刻を計算<br />
+        3. 自動で完了予定時刻を計算<br />
         4. 設定した時間に通知が表示されます<br />
         5.
         ⚠️通知時間の設定を変更した場合は、「修正ボタン」をクリックして更新してください。
@@ -233,7 +253,7 @@
       </p>
     </div>
 
-    <div class="footer">v1.0.0 | freee退勤通知</div>
+    <div class="footer">v1.1.0 | freee退勤通知</div>
 
     <script src="popup.js"></script>
   </body>
